--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@
     background-repeat: no-repeat;
 }
 
-.duty-head h3{
+.callout h3{
+    padding: 20px;
+    margin-top: 20px;
     font-size: 5em;
     font-weight: 700;
     letter-spacing: 6px;
-    position: relative;
-    bottom: -6vh;
     color: #fff;
     text-shadow:
             -1px -1px 0 #ccc,
@@ -99,5 +99,14 @@
 @media screen  and (max-height: 600px) {
     .callout {
         height: 40vh;
+    }
+    .main-title {
+        height: 60vh;
+    }
+}
+@media screen and (max-width: 400px) {
+    .main-title {
+        height: 35vh;
+        width: 80vw;
     }
 }
