--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 }
 
 .callout {
-    min-height: 20vh;
+    min-height: 30vh;
     background-image: url("Doctor-Natural-Hair.jpg");
     background-size: cover;
     background-position: right;
@@ -64,7 +64,7 @@
 }
 .callout h3{
     padding: 20px;
-    margin-top: 20px;
+    padding-top: 10vh;
     font-size: 5em;
     font-weight: 700;
     letter-spacing: 6px;
@@ -77,7 +77,7 @@
 }
 .callout h4{
     padding: 20px;
-    margin-top: 40px;
+    padding-top: 10vh;
     font-size: 3.6em;
     font-weight: 700;
     color: #fff;
@@ -122,3 +122,4 @@
         width: 80vw;
     }
 }
+.badge{background-color: #e51c23; font-weight: 600;}
