--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     background-position: center;
     background-repeat: no-repeat;
     width: 100vw;
-    height: 90vh;
+    height: 95vh;
 }
 
 .main-title {
@@ -52,9 +52,10 @@
 
 .callout {
     min-height: 50vh;
+    background-attachment: fixed;
     background-image: url("Doctor-Natural-Hair.jpg");
     background-size: cover;
-    background-position: right;
+    background-position: center;
     background-repeat: no-repeat;
     word-wrap: normal;
 }
